--- a/touchbase-react/src/components/Featured/Featured.css
+++ b/touchbase-react/src/components/Featured/Featured.css
@@ -13,6 +13,15 @@
 }
 
 .featured-content {
+  background-color: blue;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
+  grid-auto-rows: 200px;
+}
+
+/*
+.featured-content {
   //background-color: red;
   text-align: center;
   padding-top: 50px;
@@ -80,4 +89,4 @@
 
 .featured-influencer-name {
   font-size: 25px;
-}
+}*/
