--- a/touchbase-react/src/components/Footer/Footer.css
+++ b/touchbase-react/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-div {
-  background-color: #9e9d9d;
+  //background-color: #9e9d9d;
   height: 100%;
   width: 100%;
   margin: 0 auto;
@@ -9,14 +9,28 @@
 }
 
 .footer-logo {
-  float: left;
-  width: 25%;
+  //width: 25%;
   //padding-left: 30px;
-  padding-top: 10px;
+  //padding-top: 10px;
   //background-color: red;
+  margin-top: 50px;
 }
 
-.footer-items {
+.touchbase-social-icons img {
+  width: 50px;
+  height: 50px;
+  margin: 20px;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.copyright {
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 50px;
+  margin-top: 20px;
+}
+/*.footer-items {
   grid-template-columns: repeat(5,auto);
   grid-gap: 5px;
   list-style: none;
@@ -50,4 +64,4 @@
 .copyright-text {
   text-align: center;
   font-family: "HelveticaNeue-Light", sans-serif;
-}
+}*/
