--- a/touchbase-react/src/components/Meetings/IndividualMeetingNew.css
+++ b/touchbase-react/src/components/Meetings/IndividualMeetingNew.css
@@ -8,7 +8,7 @@
   background-color: #E8E9ED;
   border-radius: 20px;
   display: grid;
-  grid-template: 10vh / 30vw 10vw 10vw 10vw 10vw 15vw ;
+  grid-template: 10vh / 20vw 10vw 10vw 10vw 10vw 10vw 15vw ;
   font-family: "HelveticaNeue-Light", sans-serif;
   font-size: 15px;
   animation-name: slideInTop;
@@ -22,14 +22,18 @@
 }
 
 .ind-join-button {
-  color: white;
-  background-color: #5271ff;
-  font-size: 15px;
-  padding: 6px 16px;
+  color: black;
+  background-color: white;
+  font-size: 18px;
   border-radius: 12px;
+  margin: 15px;
+  margin-top: 10px;
+  padding: 10px 20px;
   font-family: "HelveticaNeue-Light", sans-serif;
-  width: 50%;
-  height: 3vh;
+  border: 1px solid white;
+  width: 100px;
+  border: 2px solid black;
+  font-weight: 600;
 }
 
 .ind-title {
