--- a/touchbase-react/src/components/Meetings/IndividualMeetingsPast.css
+++ b/touchbase-react/src/components/Meetings/IndividualMeetingsPast.css
@@ -8,7 +8,7 @@
   background-color: #E8E9ED;
   border-radius: 20px;
   display: grid;
-  grid-template: 10vh / 25vw 13vw 13vw 13vw 13vw ;
+  grid-template: 10vh / 15vw 10vw 13vw 13vw 13vw 13vw ;
   font-family: "HelveticaNeue-Light", sans-serif;
   font-size: 15px;
   animation-name: slideInTop;
